# wsgi

./: create_db.py  create_db.sql  pyproject.toml  request_log.txt  run.py  urls.py  views.py
FastAPItest/: main.py  schemas.py
FastAPItest/models/: db.py
WebAPImanyTOmany/: .env  .env.sample  Dockerfile  docker-compose.yml  pyproject.toml  readme.md
WebAPImanyTOmany/webapi/: .gitignore  db.sqlite3
WebAPImanyTOmany/webapi/webapi/: asgi.py  settings.py  urls.py  wsgi.py
framework/: main.py  middlware.py  templator.py
patterns/: architectural.py  behavior.py  creational.py  structural.py
pythonProject/draft/: 1.py  df.py  file.py  pyproject.toml
pythonProject/rabbit/: pyproject.toml  receiver.py  sender.py
static/: style.css
templates/: add_student.html  base.html  categories.html  contacts.html  courses.html  inc_css.html  inc_footer.html  inc_menu.html  index.html  new_category.html  new_course.html  new_student.html  second.html  students.html
wsgi_framework/: dockerfile  main.py  middlware.py  templator.py  views.py
wsgi_framework/lesson_1_philippov/: main.py  middlware.py  pyproject.toml  run.py  urls.py
wsgi_framework/lesson_1_philippov/templates/: second.html
wsgi_framework/lesson_2_philippov/: Readme.md  dockerfile  entrypoint.sh  http_requests.py  main.py  urls.py
wsgi_framework/lesson_2_philippov/templates/: contactus.html  general.css  home_site.html  inc_menu.html  second.html
wsgi_framework/templates/: home_site.html
