[tool.poetry]
name = "webapimanytomany"
version = "0.1.0"
description = ""
authors = ["bervr <bervrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
