[tool.poetry]
name = "wsgi-framework"
version = "0.1.0"
description = ""
authors = ["bervr <bervrr@gmail.com>"]
readme = "README.md"
packages = [{include = "wsgi_framework"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.6.3"
Jinja2 = "^3.1.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
